Update navigation: fix home icon and add GitHub repository link

--- a/index.html
+++ b/index.html
@@ -52,9 +52,15 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://keunhong.com">
+      <a class="navbar-item" href="#" title="Home">
       <span class="icon">
           <i class="fas fa-home"></i>
+      </span>
+      </a>
+
+      <a class="navbar-item" href="https://github.com/anas-zafar/Responsible-AI" target="_blank" title="GitHub Repository">
+      <span class="icon">
+          <i class="fab fa-github"></i>
       </span>
       </a>
 
@@ -158,9 +164,9 @@
         <div class="responsible-ai-icon">
           <i class="fas fa-balance-scale fa-5x" style="color: #3273dc; margin-bottom: 2rem;"></i>
         </div>
-        <h2 class="subtitle has-text-centered">
+      <h2 class="subtitle has-text-centered">
           A comprehensive survey exploring responsibility in <span class="dnerf">Generative AI</span> systems: examining the roles of data, models, users, and regulations for a sustainable future.
-        </h2>
+      </h2>
       </div>
     </div>
   </div>
@@ -176,28 +182,28 @@
             <i class="fas fa-database fa-3x" style="color: #3273dc; margin-bottom: 1rem;"></i>
             <h3 class="title is-4">Data Responsibility</h3>
             <p>Quality, bias mitigation, and ethical data collection practices</p>
-          </div>
+        </div>
         </div>
         <div class="column is-one-third has-text-centered">
           <div class="box">
             <i class="fas fa-brain fa-3x" style="color: #23d160; margin-bottom: 1rem;"></i>
             <h3 class="title is-4">Model Accountability</h3>
             <p>Architecture decisions, training methodologies, and deployment considerations</p>
-          </div>
+        </div>
         </div>
         <div class="column is-one-third has-text-centered">
           <div class="box">
             <i class="fas fa-users fa-3x" style="color: #ff3860; margin-bottom: 1rem;"></i>
             <h3 class="title is-4">User Responsibility</h3>
             <p>Ethical application, misuse prevention, and responsible usage patterns</p>
-          </div>
+        </div>
         </div>
         <div class="column is-one-third has-text-centered">
           <div class="box">
             <i class="fas fa-gavel fa-3x" style="color: #ffdd57; margin-bottom: 1rem;"></i>
             <h3 class="title is-4">Regulatory Frameworks</h3>
             <p>Policy development, governance structures, and enforcement mechanisms</p>
-          </div>
+        </div>
         </div>
       </div>
     </div>
