--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </a>
         </div>
       </div> -->
-    </div>
+    </div>btex 
 
   </div>
 </nav>
@@ -309,13 +309,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{raza2025responsible,
-  title        = {Who is Responsible? The Data, Models, Users or Regulations? Responsible Generative AI for a Sustainable Future},
-  author       = {Shaina Raza and Rizwan Qureshi and Anam Zahid and Joseph Fioresi and Ferhat Sadak and Muhammad Saeed and Ranjan Sapkota and Aditya Jain and Anas Zafar and Muneeb Ul Hassan and Aizan Zafar and Hasan Maqbool and Ashmal Vayani and Jia Wu and Maged Shoman},
-  journal      = {TechRxiv Preprints},
-  year         = {2025},
-  publisher    = {TechRxiv},
-  doi          = {10.36227/techrxiv.173834932.29831105},
-  url          = {https://www.techrxiv.org/doi/full/10.36227/techrxiv.173834932.29831105/v1}
+  title={Who is responsible? the data, models, users or regulations? a comprehensive survey on responsible generative ai for a sustainable future},
+  author={Raza, Shaina and Qureshi, Rizwan and Zahid, Anam and Fioresi, Joseph and Sadak, Ferhat and Saeed, Muhammad and Sapkota, Ranjan and Jain, Aditya and Zafar, Anas and Hassan, Muneeb Ul and others},
+  journal={arXiv preprint arXiv:2502.08650},
+  year={2025}
 }</code></pre>
   </div>
 </section>
