Update author list with detailed affiliations and equal contributors

--- a/index.html
+++ b/index.html
@@ -96,25 +96,44 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">Who is Responsible? The Data, Models, Users or Regulations? Responsible Generative AI for a Sustainable Future</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">Shaina Raza<sup>1</sup>,</span>
-            <span class="author-block">Rizwan Qureshi<sup>2</sup>,</span>
+            <span class="author-block">Shaina Raza<sup>∗1</sup>,</span>
+            <span class="author-block">Rizwan Qureshi<sup>∗2</sup>,</span>
             <span class="author-block">Anam Zahid<sup>3</sup>,</span>
-            <span class="author-block">Joseph Fioresi<sup>4</sup>,</span>
-            <span class="author-block">Ferhat Sadak<sup>5</sup>,</span>
-            <span class="author-block">Muhammad Saeed<sup>6</sup>,</span>
-            <span class="author-block">Ranjan Sapkota<sup>7</sup>,</span>
-            <span class="author-block">Aditya Jain<sup>8</sup>,</span>
-            <span class="author-block">Anas Zafar<sup>9</sup>,</span>
-            <span class="author-block">Muneeb Ul Hassan<sup>10</sup>,</span>
-            <span class="author-block">Aizan Zafar<sup>11</sup>,</span>
-            <span class="author-block">Hasan Maqbool<sup>12</sup>,</span>
-            <span class="author-block">Ashmal Vayani<sup>13</sup>,</span>
-            <span class="author-block">Jia Wu<sup>14</sup>,</span>
-            <span class="author-block">Maged Shoman<sup>15</sup></span>
+            <span class="author-block">Safiullah Kamawal<sup>4</sup>,</span>
+            <span class="author-block">Joe Fioresi<sup>5</sup>,</span>
+            <span class="author-block">Ferhat Sadak<sup>6</sup>,</span>
+            <span class="author-block">Muhammad Saeed<sup>7</sup>,</span>
+            <span class="author-block">Ranjan Sapkota<sup>8</sup>,</span>
+            <span class="author-block">Aditya Jain<sup>9</sup>,</span>
+            <span class="author-block">Anas Zafar<sup>10</sup>,</span>
+            <span class="author-block">Muneeb Ul Hassan<sup>11</sup>,</span>
+            <span class="author-block">Aizan Zafar<sup>12</sup>,</span>
+            <span class="author-block">Hasan Maqbool<sup>13</sup>,</span>
+            <span class="author-block">Ashmal Vayani<sup>14</sup>,</span>
+            <span class="author-block">Jia Wu<sup>15</sup>,</span>
+            <span class="author-block">Maged Shoman<sup>16</sup></span>
           </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1-15</sup>Various Institutions</span>
+          <div class="is-size-6 publication-authors" style="margin-top: 1rem;">
+            <div class="affiliations" style="text-align: left; max-width: 800px; margin: 0 auto;">
+              <p><sup>∗</sup>Equal contributors</p>
+              <p><sup>1</sup>Vector Institute, Canada</p>
+              <p><sup>2</sup>Center for Research in Computer Vision, The University of Central Florida, USA</p>
+              <p><sup>3</sup>Department of Computer Science, Information Technology University of the Punjab, Pakistan</p>
+              <p><sup>4</sup>Queen's University, Vector Institute, Canada</p>
+              <p><sup>5</sup>Center for Research in Computer Vision, The University of Central Florida, USA</p>
+              <p><sup>6</sup>Department of Mechanical Engineering, Bartin University, Türkiye</p>
+              <p><sup>7</sup>Saarland University, Germany</p>
+              <p><sup>8</sup>Washington State University, USA</p>
+              <p><sup>9</sup>University of Texas at Austin, USA</p>
+              <p><sup>10</sup>Fast School of Computing, National University of Computer and Emerging Sciences, Pakistan</p>
+              <p><sup>11</sup>School of Information Technology, Deakin University, Australia</p>
+              <p><sup>12</sup>Center for research in computer vision, University of Central Florida, USA</p>
+              <p><sup>13</sup>Independent Researcher, USA</p>
+              <p><sup>14</sup>Center for Research in Computer Vision, University of Central Florida, USA</p>
+              <p><sup>15</sup>MD Anderson Cancer Center, The University of Texas, USA</p>
+              <p><sup>16</sup>University of Tennessee; Oak Ridge National Lab, USA</p>
+            </div>
           </div>
 
           <div class="column has-text-centered">
