Update abstract with comprehensive survey methodology and findings

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </a>
         </div>
       </div> -->
-    </div>btex chan to 
+    </div>btex chan to  absteac
 
   </div>
 </nav>
@@ -228,24 +228,24 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            As generative artificial intelligence (AI) systems become increasingly sophisticated and widespread, 
-            the question of responsibility becomes paramount. This comprehensive survey examines the complex 
-            landscape of accountability in generative AI, addressing the fundamental question: Who is responsible 
-            when AI systems cause harm or make problematic decisions?
+            Generative AI is moving rapidly from research into real world deployment across sectors, which elevates the need for responsible 
+            development, evaluation, and governance. This survey synthesizes the landscape of responsible generative AI across methods, 
+            benchmarks, and policies, and connects governance expectations to concrete engineering practice. We follow a prespecified search 
+            and screening protocol focused on post-ChatGPT era with selective inclusion of foundational work for definitions, and we conduct a 
+            narrative and thematic synthesis.
           </p>
           <p>
-            We systematically analyze responsibility across four key dimensions: <strong>data</strong> (quality, bias, and provenance), 
-            <strong>models</strong> (architecture, training methodologies, and deployment decisions), <strong>users</strong> (application, 
-            misuse, and ethical considerations), and <strong>regulations</strong> (policy frameworks, governance structures, 
-            and enforcement mechanisms). Our analysis reveals that responsibility is not singular but distributed 
-            across this ecosystem of stakeholders.
+            Three findings emerge. First, benchmark and practice coverage is dense for bias and toxicity but 
+            relatively sparse for privacy and provenance, deepfake and media integrity risk, and system level failure in tool using and agentic 
+            settings. Second, many evaluations remain static and task local, which limits evidence portability for audit and lifecycle assurance. 
+            Third, documentation and metric validity are inconsistent, which complicates comparison across releases and domains.
           </p>
           <p>
-            Through extensive literature review and case study analysis, we identify critical gaps in current 
-            approaches to AI responsibility and propose a framework for sustainable and responsible generative 
-            AI development. Our findings emphasize the need for collaborative governance models that balance 
-            innovation with ethical considerations, ensuring that generative AI systems contribute positively 
-            to society while minimizing potential harms.
+            We outline a research and practice agenda that prioritizes adaptive and multimodal evaluation, privacy and provenance testing, deepfake risk 
+            assessment, calibration and uncertainty reporting, versioned and documented artifacts, and continuous monitoring. Limitations 
+            include reliance on public artifacts and the focus period, which may under represent capabilities reported later. The survey offers a 
+            path to align development and evaluation with governance needs and to support safe, transparent, and accountable deployment across 
+            domains.
           </p>
         </div>
       </div>
