Improve author affiliations styling with grid layout and better formatting

--- a/index.html
+++ b/index.html
@@ -114,25 +114,31 @@
             <span class="author-block">Maged Shoman<sup>16</sup></span>
           </div>
 
-          <div class="is-size-6 publication-authors" style="margin-top: 1rem;">
-            <div class="affiliations" style="text-align: left; max-width: 800px; margin: 0 auto;">
-              <p><sup>∗</sup>Equal contributors</p>
-              <p><sup>1</sup>Vector Institute, Canada</p>
-              <p><sup>2</sup>Center for Research in Computer Vision, The University of Central Florida, USA</p>
-              <p><sup>3</sup>Department of Computer Science, Information Technology University of the Punjab, Pakistan</p>
-              <p><sup>4</sup>Queen's University, Vector Institute, Canada</p>
-              <p><sup>5</sup>Center for Research in Computer Vision, The University of Central Florida, USA</p>
-              <p><sup>6</sup>Department of Mechanical Engineering, Bartin University, Türkiye</p>
-              <p><sup>7</sup>Saarland University, Germany</p>
-              <p><sup>8</sup>Washington State University, USA</p>
-              <p><sup>9</sup>University of Texas at Austin, USA</p>
-              <p><sup>10</sup>Fast School of Computing, National University of Computer and Emerging Sciences, Pakistan</p>
-              <p><sup>11</sup>School of Information Technology, Deakin University, Australia</p>
-              <p><sup>12</sup>Center for research in computer vision, University of Central Florida, USA</p>
-              <p><sup>13</sup>Independent Researcher, USA</p>
-              <p><sup>14</sup>Center for Research in Computer Vision, University of Central Florida, USA</p>
-              <p><sup>15</sup>MD Anderson Cancer Center, The University of Texas, USA</p>
-              <p><sup>16</sup>University of Tennessee; Oak Ridge National Lab, USA</p>
+          <div class="is-size-6 publication-authors" style="margin-top: 1.5rem;">
+            <div style="text-align: center; margin-bottom: 1rem;">
+              <span style="font-style: italic; color: #666; font-size: 0.9rem;">
+                <sup>∗</sup>Equal contributors
+              </span>
+            </div>
+            <div class="affiliations" style="max-width: 900px; margin: 0 auto; text-align: left;">
+              <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 0.3rem 2rem; line-height: 1.4;">
+                <div><sup style="color: #3273dc; font-weight: bold;">1</sup> Vector Institute, Canada</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">2</sup> Center for Research in Computer Vision, The University of Central Florida, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">3</sup> Department of Computer Science, Information Technology University of the Punjab, Pakistan</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">4</sup> Queen's University, Vector Institute, Canada</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">5</sup> Center for Research in Computer Vision, The University of Central Florida, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">6</sup> Department of Mechanical Engineering, Bartin University, Türkiye</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">7</sup> Saarland University, Germany</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">8</sup> Washington State University, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">9</sup> University of Texas at Austin, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">10</sup> Fast School of Computing, National University of Computer and Emerging Sciences, Pakistan</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">11</sup> School of Information Technology, Deakin University, Australia</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">12</sup> Center for research in computer vision, University of Central Florida, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">13</sup> Independent Researcher, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">14</sup> Center for Research in Computer Vision, University of Central Florida, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">15</sup> MD Anderson Cancer Center, The University of Texas, USA</div>
+                <div><sup style="color: #3273dc; font-weight: bold;">16</sup> University of Tennessee; Oak Ridge National Lab, USA</div>
+              </div>
             </div>
           </div>
 
