Complete redesign of author affiliations with elegant column layout and background styling

--- a/index.html
+++ b/index.html
@@ -114,30 +114,62 @@
             <span class="author-block">Maged Shoman<sup>16</sup></span>
           </div>
 
-          <div class="is-size-6 publication-authors" style="margin-top: 1.5rem;">
-            <div style="text-align: center; margin-bottom: 1rem;">
-              <span style="font-style: italic; color: #666; font-size: 0.9rem;">
+          <div class="is-size-6 publication-authors" style="margin-top: 1rem;">
+            <div style="text-align: center; margin-bottom: 0.8rem;">
+              <span style="font-style: italic; color: #777; font-size: 0.85rem;">
                 <sup>∗</sup>Equal contributors
               </span>
             </div>
-            <div class="affiliations" style="max-width: 900px; margin: 0 auto; text-align: left;">
-              <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 0.3rem 2rem; line-height: 1.4;">
-                <div><sup style="color: #3273dc; font-weight: bold;">1</sup> Vector Institute, Canada</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">2</sup> Center for Research in Computer Vision, The University of Central Florida, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">3</sup> Department of Computer Science, Information Technology University of the Punjab, Pakistan</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">4</sup> Queen's University, Vector Institute, Canada</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">5</sup> Center for Research in Computer Vision, The University of Central Florida, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">6</sup> Department of Mechanical Engineering, Bartin University, Türkiye</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">7</sup> Saarland University, Germany</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">8</sup> Washington State University, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">9</sup> University of Texas at Austin, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">10</sup> Fast School of Computing, National University of Computer and Emerging Sciences, Pakistan</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">11</sup> School of Information Technology, Deakin University, Australia</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">12</sup> Center for research in computer vision, University of Central Florida, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">13</sup> Independent Researcher, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">14</sup> Center for Research in Computer Vision, University of Central Florida, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">15</sup> MD Anderson Cancer Center, The University of Texas, USA</div>
-                <div><sup style="color: #3273dc; font-weight: bold;">16</sup> University of Tennessee; Oak Ridge National Lab, USA</div>
+            <div style="max-width: 1000px; margin: 0 auto; background: #f8f9fa; padding: 1.2rem; border-radius: 8px; border-left: 4px solid #3273dc;">
+              <div style="columns: 2; column-gap: 2rem; font-size: 0.85rem; line-height: 1.5; color: #555;">
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">1</sup>Vector Institute, Canada
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">2</sup>University of Central Florida, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">3</sup>Information Technology University of Punjab, Pakistan
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">4</sup>Queen's University, Canada
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">5</sup>University of Central Florida, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">6</sup>Bartin University, Türkiye
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">7</sup>Saarland University, Germany
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">8</sup>Washington State University, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">9</sup>University of Texas at Austin, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">10</sup>National University of Computer Sciences, Pakistan
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">11</sup>Deakin University, Australia
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">12</sup>University of Central Florida, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">13</sup>Independent Researcher, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">14</sup>University of Central Florida, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">15</sup>MD Anderson Cancer Center, USA
+                </div>
+                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
+                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">16</sup>University of Tennessee, USA
+                </div>
               </div>
             </div>
           </div>
