Simplify affiliations to 'Various Institutions' and add Code button next to arXiv

--- a/index.html
+++ b/index.html
@@ -114,64 +114,12 @@
             <span class="author-block">Maged Shoman<sup>16</sup></span>
           </div>
 
-          <div class="is-size-6 publication-authors" style="margin-top: 1rem;">
-            <div style="text-align: center; margin-bottom: 0.8rem;">
-              <span style="font-style: italic; color: #777; font-size: 0.85rem;">
-                <sup>∗</sup>Equal contributors
-              </span>
-            </div>
-            <div style="max-width: 1000px; margin: 0 auto; background: #f8f9fa; padding: 1.2rem; border-radius: 8px; border-left: 4px solid #3273dc;">
-              <div style="columns: 2; column-gap: 2rem; font-size: 0.85rem; line-height: 1.5; color: #555;">
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">1</sup>Vector Institute, Canada
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">2</sup>University of Central Florida, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">3</sup>Information Technology University of Punjab, Pakistan
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">4</sup>Queen's University, Canada
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">5</sup>University of Central Florida, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">6</sup>Bartin University, Türkiye
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">7</sup>Saarland University, Germany
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">8</sup>Washington State University, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">9</sup>University of Texas at Austin, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">10</sup>National University of Computer Sciences, Pakistan
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">11</sup>Deakin University, Australia
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">12</sup>University of Central Florida, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">13</sup>Independent Researcher, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">14</sup>University of Central Florida, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">15</sup>MD Anderson Cancer Center, USA
-                </div>
-                <div style="margin-bottom: 0.4rem; break-inside: avoid;">
-                  <sup style="color: #3273dc; font-weight: 600; margin-right: 0.3rem;">16</sup>University of Tennessee, USA
-                </div>
-              </div>
-            </div>
+          <div class="is-size-5 publication-authors">
+            <span class="author-block"><sup>∗</sup>Equal contributors</span>
+          </div>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">Various Institutions</span>
           </div>
 
           <div class="column has-text-centered">
@@ -193,6 +141,16 @@
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
+                </a>
+              </span>
+              <!-- Code Link. -->
+              <span class="link-block">
+                <a href="https://github.com/anas-zafar/Responsible-AI"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
                 </a>
               </span>
             </div>
